# OpenWhiz

./: .cproject  .project  CMakeLists.txt  README.md
examples/airfoilExample/: CMakeLists.txt  airfoil_self_noise.csv  main.cpp
examples/anomalyDetectionExample/: CMakeLists.txt  anomaly_data.csv  main.cpp
examples/approximationExample/: CMakeLists.txt  approximation_data.csv  main.cpp
examples/attentionExample/: CMakeLists.txt  main.cpp
examples/breastCancerExample/: CMakeLists.txt  main.cpp
examples/classificationExample/: CMakeLists.txt  classification_data.csv  main.cpp
examples/clippingExample/: CMakeLists.txt  main.cpp
examples/clusterExample/: CMakeLists.txt  main.cpp
examples/clusteringExample/: CMakeLists.txt  clustering_data.csv  clustering_model.xml  main.cpp
examples/concatenateForecastingExample/: CMakeLists.txt  main.cpp  usd_try_sim.csv
examples/datasetExample/: CMakeLists.txt  main.cpp
examples/forecastExample/: CMakeLists.txt  forecast_data.csv  main.cpp  sine_wave.csv
examples/incrementalLearningExample/: CMakeLists.txt  main.cpp
examples/multiheadAttentionExample/: CMakeLists.txt  main.cpp
examples/pcaExample/: CMakeLists.txt  main.cpp
examples/rankingExample/: CMakeLists.txt  main.cpp
examples/smoothingExample/: CMakeLists.txt  main.cpp
examples/tensorExample/: CMakeLists.txt  main.cpp
examples/tryusdConcatenateForecastingExample/: CMakeLists.txt  main.cpp
examples/tryusdForecastExample/: CMakeLists.txt  main.cpp  usd-try_3years.csv
include/OpenWhiz/: openwhiz.hpp
include/OpenWhiz/core/: owNeuralNetwork.hpp  owNeuralNetwork.inl  owSimd.hpp  owTensor.hpp
include/OpenWhiz/data/: owDataset.hpp  owStatistics.hpp
include/OpenWhiz/layers/: owAdditionLayer.hpp  owAffineLayer.hpp  owAnomalyDetectionLayer.hpp  owAttentionLayer.hpp  owBoundingLayer.hpp  owCacheLayer.hpp  owChangeRateLayer.hpp  owClippingLayer.hpp  owClusterLayer.hpp  owConcatenateLayer.hpp  owDateTimeEncodingLayer.hpp  owDistanceLayer.hpp  owInverseNormalizationLayer.hpp  owLSTMLayer.hpp  owLayer.hpp  owLinearLayer.hpp  owMultiHeadAttentionLayer.hpp  owNormalizationLayer.hpp  owPositionEncodingLayer.hpp  owProbabilityLayer.hpp  (+8 more)
tests/: approximation_data.csv  classification_data.csv  concatenated_data.csv  incremental_model.xml  simple_data.csv  sine_wave.csv  test_clustering_pca.cpp  test_concatenatedForecasting.cpp  test_concatenated_data.csv  test_forecastingLayers.cpp  test_network.xml  test_newLayers.cpp  test_owLayerNames.cpp  test_owMetadata.cpp  test_owNeuralNetwork.cpp  test_owSerialization.cpp  test_owSpecialLayers.cpp  test_owTensor.cpp  test_owTensorMap.cpp  test_string_tensor.cpp
(+23 files in other folders)
